@@ -5,7 +5,7 @@
     <parent>
         <artifactId>base</artifactId>
         <groupId>org.cardanofoundation.rosetta-java</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>api</artifactId>
@@ -13,6 +13,7 @@
     <description>Rosetta API implementation for Cardano.</description>
     <properties>
         <spotbugs-annotations.version>4.8.3</spotbugs-annotations.version>
+        <argLine/>
     </properties>
 
     <packaging>jar</packaging>
@@ -158,7 +159,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.20.2</version>
+            <version>${version.assertj-core}</version>
             <scope>test</scope>
         </dependency>
 
@@ -168,7 +169,7 @@
         </dependency>
         <dependency>
             <artifactId>hibernate-jpamodelgen</artifactId>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.orm</groupId>
             <version>6.2.0.Final</version>
             <scope>provided</scope>
         </dependency>
@@ -236,23 +237,16 @@
             <artifactId>modelmapper-spring</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>${assertj-core.version}</version>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>test-data-generator</artifactId>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
-      <dependency>
-        <groupId>org.cardanofoundation.rosetta-java</groupId>
-        <artifactId>test-data-generator</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <version>2.2.224</version>
-        <scope>test</scope>
-      </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -377,12 +371,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>${version.maven-surefire-plugin}</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                    <argLine>${argLine}</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.11</version>
+                <version>${version.jacoco-maven-plugin}</version>
                 <configuration>
                     <excludes>
                         <exclude>**/org/openapitools/**</exclude>
